styles/main.scss
// Defining values
//screen sizes
$screen-sm-min: 768px;
$screen-md-min: 992px;
$screen-lg-min: 1200px;
//colors
$Red: rgb(255, 0, 0);
$Eggplant: rgb(128, 0, 128);
$Black: rgb(0, 0, 0);
$Medium: rgb(127, 127, 127);
$White: rgb(255, 255, 255);
$NavyBlue: rgb(25, 39, 52);

.icon{
  size:20rem;
}

.map-container {
  width: 100%;
  @media(max-width:$screen-sm-min) {
    height: 50vh
  }
  height: 70vh;
  border-radius:1rem;
}

.button-container{
  display:flex;
  gap: 1rem;
  button{
    background-color:$NavyBlue;
    color:white;
    padding:.7rem .7rem .7rem .7rem ;
    border-radius:.5rem;
    border: .1rem solid white;
  }
  button:hover {
    border: .1rem solid $Eggplant;
  }
}

.mapbox {
  padding:4rem;
  @media(max-width:$screen-sm-min) {
    display:flex;
    flex-direction:column;
    padding:none;
  }
  display:grid;
  gap:2rem;
  grid-template-columns:repeat(2, 1fr);
  grid-template-rows: 1;
  font-size:x-large;
}

.dayscontainer{
  padding:1rem;
  display:grid;
  grid-template-columns:repeat(4, 1fr);
  gap:2rem;
  font-size:smaller;
  .day{
    display:flex;
    flex-direction:column;
    gap:.1rem;
    place-items:center;
  }
  @media(max-width:$screen-md-min) {
    display:flex;
    flex-direction:column;
  }
}

.displaypanel{
  background-color:$Medium;
  padding:2rem;
  border-radius:2rem;
  box-shadow:0 0 0 .2rem white
}

.header {
  display: flex;
  justify-content:center;
  font-size: 3rem;
  font-weight:bolder;
  padding: 2rem;
  box-shadow: 0 0 0 .2rem white;
}


.sidebar {
  background-color: rgba(35, 55, 75, 0.9);
  color: #fff;
  padding: 6px 12px;
  font-family: monospace;
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  margin: 12px;
  border-radius: 4px;
  }
  

